--- a/academy.html
+++ b/academy.html
@@ -80,5 +80,110 @@
         </div>
         <!-- bannner ends -->
 
+        <!-- sec1 starts -->
+        <div class="acad-sec1">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h4>Our ultimate joy lies in being mentioned as part of
+                            your success story</h4>
+                        <p>We ensure our students work on real life projects
+                            that form part of their portfolio. During and after
+                            the training, we offer continuous support to our
+                            trainees. Furthermore, trainees who wish to stay
+                            back after the training get to enjoy unhindered
+                            access to our facility.</p>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="row">
+                            <div class="col-md-3">
+                                <div class="b1">
+                                    <img src="images/acad-images/curriculum.png"
+                                        alt="cu">
+                                    <p>Curriculum</p>
+                                    <h5>95%</h5>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="b1">
+                                    <img
+                                        src="images/acad-images/facilitator.png"
+                                        alt="fa">
+                                    <p>Facilitators</p>
+                                    <h5>97%</h5>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="b1">
+                                    <img
+                                        src="images/acad-images/planet-earth.png"
+                                        alt="pe">
+                                    <p>Environment</p>
+                                    <h5>96%</h5>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="b1">
+                                    <img src="images/acad-images/discussion.png"
+                                        alt="cu">
+                                    <p>Mentorship</p>
+                                    <h5>99%</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- sec1 ends -->
+
+        <!-- sec2 starts -->
+
+        <div class="acad-sec2">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                          <div class="row">
+                            <div class="col-md-6">
+                                <p><i class="bi bi-facebook"></i></p>
+                                <p><i class="bi bi-twitter"></i></p>
+                                <p><i class="bi bi-instagram"></i></p>
+                                <img src="images/acad-images/lu.png" alt="lu">
+                                <h5>Lu Abikoye</h5>
+                                <p>Lead Facilitator</p>
+                            </div>
+                            <div class="col-md-6">
+                                <p><i class="bi bi-facebook"></i></p>
+                                <p><i class="bi bi-twitter"></i></p>
+                                <p><i class="bi bi-linkedin"></i></p>
+                                <img src="images/acad-images/pelumi.png" alt="pelums">
+                                <h5>Pelumi Ajibola</h5>
+                                <p>Facilitator</p>
+                            </div>
+                            <div class="col-md-6">
+                                <p><i class="bi bi-facebook"></i></p>
+                                <p><i class="bi bi-twitter"></i></p>
+                                <p><i class="bi bi-instagram"></i></p>
+                                <img src="images/acad-images/muyiwa.png" alt="muyi">
+                                <h5>Muyiwa Adewoye</h5>
+                                <p>Facilitator</p>
+                            </div>
+                            <div class="col-md-6">
+                                <p><i class="bi bi-facebook"></i></p>
+                                <p><i class="bi bi-twitter"></i></p>
+                                <p><i class="bi bi-instagram"></i></p>
+                                <img src="images/acad-images/segun.png" alt="segs">
+                                <h5>Segun Adewoyin</h5>
+                                <p>Facilitator</p>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- sec2 ends -->
+
     </body>
 </html>
