academy page done

--- a/academy.html
+++ b/academy.html
@@ -143,47 +143,183 @@
         <div class="acad-sec2">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6">
-                          <div class="row">
-                            <div class="col-md-6">
-                                <p><i class="bi bi-facebook"></i></p>
-                                <p><i class="bi bi-twitter"></i></p>
-                                <p><i class="bi bi-instagram"></i></p>
-                                <img src="images/acad-images/lu.png" alt="lu">
-                                <h5>Lu Abikoye</h5>
-                                <p>Lead Facilitator</p>
+                    <div class="col-lg-12 col-xl-6">
+                        <div class="fp">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="icon1">
+                                        <span><i
+                                                class="bi bi-facebook"></i></span>
+                                        <span><i
+                                                class="bi bi-twitter"></i></span>
+                                        <span><i
+                                                class="bi bi-instagram"></i></span>
+                                        <!-- <img src="images/acad-images/lu.png"
+                                        alt="lu"> -->
+                                    </div>
+                                    <h5>Lu Abikoye</h5>
+                                    <p>Lead Facilitator</p>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="icon2">
+                                        <span><i
+                                                class="bi bi-facebook"></i></span>
+                                        <span><i
+                                                class="bi bi-twitter"></i></span>
+                                        <span><i
+                                                class="bi bi-linkedin"></i></span>
+                                        <!-- <img src="images/acad-images/pelumi.png"
+                                        alt="pelums"> -->
+                                    </div>
+                                    <h5>Pelumi Ajibola</h5>
+                                    <p>Facilitator</p>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="icon3">
+                                        <span><i
+                                                class="bi bi-facebook"></i></span>
+                                        <span><i
+                                                class="bi bi-twitter"></i></span>
+                                        <span><i
+                                                class="bi bi-instagram"></i></span>
+                                        <!-- <img src="images/acad-images/muyiwa.png"
+                                        alt="muyi"> -->
+                                    </div>
+                                    <h5>Muyiwa Adewoye</h5>
+                                    <p>Facilitator</p>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="icon4">
+                                        <span><i
+                                                class="bi bi-facebook"></i></span>
+                                        <span><i
+                                                class="bi bi-twitter"></i></span>
+                                        <span><i
+                                                class="bi bi-instagram"></i></span>
+                                        <!-- <img src="images/acad-images/segun.png"
+                                        alt="segs"> -->
+                                    </div>
+                                    <h5>Segun Adewoyin</h5>
+                                    <p>Facilitator</p>
+                                </div>
                             </div>
-                            <div class="col-md-6">
-                                <p><i class="bi bi-facebook"></i></p>
-                                <p><i class="bi bi-twitter"></i></p>
-                                <p><i class="bi bi-linkedin"></i></p>
-                                <img src="images/acad-images/pelumi.png" alt="pelums">
-                                <h5>Pelumi Ajibola</h5>
-                                <p>Facilitator</p>
-                            </div>
-                            <div class="col-md-6">
-                                <p><i class="bi bi-facebook"></i></p>
-                                <p><i class="bi bi-twitter"></i></p>
-                                <p><i class="bi bi-instagram"></i></p>
-                                <img src="images/acad-images/muyiwa.png" alt="muyi">
-                                <h5>Muyiwa Adewoye</h5>
-                                <p>Facilitator</p>
-                            </div>
-                            <div class="col-md-6">
-                                <p><i class="bi bi-facebook"></i></p>
-                                <p><i class="bi bi-twitter"></i></p>
-                                <p><i class="bi bi-instagram"></i></p>
-                                <img src="images/acad-images/segun.png" alt="segs">
-                                <h5>Segun Adewoyin</h5>
-                                <p>Facilitator</p>
-                            </div>
-                          </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-12 col-xl-6">
+                        <div class="txt">
+                            <h4>Let our facilitators help position you for
+                                success within the tech space</h4>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
 
         <!-- sec2 ends -->
+
+        <!-- last-sec starts -->
+
+        <div class="last-sec">
+            <div class="container">
+                <p>ARE YOU READY?</p>
+                <h2>Be a part of our <span>Hall of Fame</span></h2>
+                <a href="#">JOIN US</a>
+            </div>
+        </div>
+
+        <!-- last sec-ends -->
+
+          <!-- footer starts -->
+
+        <footer>
+            <div class="footer-ctn">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-2">
+                            <img src="images/logo.png" alt="logo">
+                        </div>
+                        <div class="col-md-2">
+                            <ul>
+                                <li>Quicklinks</li>
+                                <li><a href="academy.html">The Academy</a></li>
+                                <li><a href="facility.html">Facility</a></li>
+                                <li><a href="faqs.html">FAQs</a></li>
+                                <li><a href="contact.html">Contact</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-md-2">
+                            <ul>
+                                <li>Course</li>
+                                <li><a href="wdf.html">Web Design Frontend</a></li>
+                                <li><a href="#">Product Design (UI/UX)</a></li>
+                                <li><a href="#">Data Science</a></li>
+                                <li><a href="#">Python</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-md-3">
+                            <p class="li-gng">Contact</p>
+                            <div class="omo">
+                                <div class>
+                                    <i class="bi bi-geo-alt"></i>
+                                </div>
+                                <div class="txt">
+                                    <p>Abbey Mortgage Bank Building
+                                        51 Okota Road, Chemist Bus Stop,
+                                        Okota-Isolo
+                                        Lagos, Nigeria</p>
+                                </div>
+                            </div>
+                            <div class="omo">
+                                <div class>
+                                    <i class="bi bi-envelope"></i>
+                                </div>
+                                <div class="txt">
+                                    <p>training@aledoyacademy.com</p>
+                                </div>
+                            </div>
+                            <div class="omo">
+                                <div class>
+                                    <i class="bi bi-telephone"></i>
+                                </div>
+                                <div class="txt">
+                                    <p>(+234) 913 597 1419</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <p class="li-gng">Join our newsletter</p>
+                            <div class="form">
+                                <div class="email">
+                                    <input type="email"
+                                        placeholder="Email Address">
+                                </div>
+                                <div class="link">
+                                    <a href="#">Submit</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="copyright">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-4 ft-icons">
+                            <span><i class="bi bi-facebook"></i></span>
+                            <span><i class="bi bi-instagram"></i></span>
+                            <span><i class="bi bi-twitter"></i></span>
+                            <span><i class="bi bi-linkedin"></i></span>
+                        </div>
+                        <div class="col-md-6">
+                            <p><i class="bi bi-c-circle"></i>2023 Aledoy
+                                Academy. All rights reserved</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+        <!-- footer ends -->
 
     </body>
 </html>
