product design page done

--- a/contact.html
+++ b/contact.html
@@ -181,7 +181,7 @@
                         <ul>
                             <li>Course</li>
                             <li><a href="wdf.html">Web Design Frontend</a></li>
-                            <li><a href="#">Product Design (UI/UX)</a></li>
+                            <li><a href="pd.html">Product Design (UI/UX)</a></li>
                             <li><a href="#">Data Science</a></li>
                             <li><a href="#">Python</a></li>
                         </ul>
