--- a/pd.html
+++ b/pd.html
@@ -37,7 +37,8 @@
                                     href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="academy.html">The Academy</a>
+                                <a class="nav-link" href="academy.html">The
+                                    Academy</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Courses</a>
@@ -71,11 +72,11 @@
                         <div class="col-md-6">
                             <div class="txt">
                                 <p>Courses</p>
-                                <h1>Web Design Frontend</h1>
+                                <h1>Product Design (UI/UX)</h1>
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <img src="images/wdf-images/Frontend.png"
+                            <img src="images/pd-image/Product Design.png"
                                 alt="banner">
                         </div>
                     </div>
@@ -90,20 +91,39 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-5 col-lg-6 txt">
-                        <h5>Do you want to bridge a gap in your web skills?</h5>
-                        <p>Come let's show you how to get your hands on HTML,
-                            CSS, BOOTSTRAP, WORDPRESS, and other web tools. This
-                            is an intensive web design training programme,
-                            designed to cover all the areas that you will need
-                            in your web design and development career. We will
-                            also show you how to source materials to improve
-                            your personal development. At the end of the
-                            programme, you will be efficient with writing your
-                            HTML codes, styling your pages using Bootstrap,
-                            registering your domain names and hosting it. You
-                            also have the opportunity to join the network of
-                            developers that we outsource projects to. Come and
-                            start a career from what you will be learning.</p>
+                        <h5>About Course</h5>
+                        <p>Learn the concept of <b> Design Thinking, User Interface
+                            Design, User Experience Creation, Wireframes &
+                            Prototypes, Mockups, Figma.</b> <br><br>
+
+                            The User Interface (UI) is the point of
+                            human-computer interaction and communication on a
+                            device, webpage, or application. User interfaces
+                            enable users to effectively control the computer,
+                            device or application they are interacting with. UI
+                            Designers are generally responsible for collecting,
+                            researching, investigating and evaluating user
+                            requirements. As a UI designer, it is your
+                            responsibility to deliver an outstanding user
+                            experience and provide an exceptional and intuitive
+                            application design. UI designers create the look and
+                            feel of an application's interface including screen
+                            layout, animations, transitions, and every single
+                            bit of micro-interaction. <br><br>
+
+                            On the other hand, the User Experience (UX) is a
+                            function of how easy - or difficult - it is to
+                            interact with the elements that have been designed
+                            on the interface. User Interface and User Experience
+                            designers are in high demand and are viable
+                            positions across industries and sectors. With more
+                            attention being paid to customer experience in
+                            marketing, organizations are now more deliberate
+                            about enhancing the interface they dish out to
+                            customers. By Ideating the branding, design,
+                            utilization and function of the product, UX
+                            designers set the tone of the overall user
+                            experience.</p>
                     </div>
 
                     <div class="col-md-7 col-lg-6">
@@ -112,42 +132,53 @@
                             <div class="row">
                                 <div class="col-6 col-md-4">
                                     <div class="bx one sp">
-                                        <p>Design your website layout using
-                                            Figma</p>
+                                        <p>Create a style
+                                            guide for your
+                                            fonts</p>
                                     </div>
                                 </div>
                                 <div class="col-6 col-md-4">
                                     <div class="bx red two sp">
-                                        <p>Convert your design to code using
-                                            HTML</p>
+                                        <p>Select your colors
+                                            and create a guide
+                                            for use of colors</p>
                                     </div>
                                 </div>
                                 <div class="col-6 col-md-4 mb-4">
                                     <div class="bx three">
-                                        <p>Add styles to your codes using CSS &
-                                            Bootstrap</p>
+                                        <p>Gather requirements
+                                            and create user flow
+                                            for your design</p>
                                     </div>
                                 </div>
 
                                 <div class="col-6 col-md-4">
                                     <div class="bx four sp">
-                                        <p>Add effects to your
-                                            website layout using
-                                            Javascript</p>
+                                        <p>Create a pleasurable
+                                            experience for your
+                                            users</p>
                                     </div>
                                 </div>
                                 <div class="col-6 col-md-4">
                                     <div class="bx red five sp">
-                                        <p>Build user interfaces
-                                            for applications
-                                            using React JS</p>
+                                        <p>Design an app for
+                                            mobile - Android</p>
                                     </div>
                                 </div>
                                 <div class="col-6 col-md-4">
-                                    <div class="bx six">
-                                        <p>Register your
-                                            domain name and
-                                            host your website</p>
+                                    <div class="bx six mb-4">
+                                        <p>Design an app for
+                                            mobile - iOS</p>
+                                    </div>
+                                </div>
+                                <div class="col-6 col-md-4">
+                                    <div class="bx seven">
+                                        <p>Design an app for web - desktop</p>
+                                    </div>
+                                </div>
+                                <div class="col-6 col-md-4">
+                                    <div class="bx red eight sp">
+                                        <p>Create prototypes for your design</p>
                                     </div>
                                 </div>
                             </div>
@@ -157,61 +188,6 @@
             </div>
         </div>
         <!-- wdf-sec1 ends -->
-
-        <!-- wdf sec2 starts -->
-
-        <div class="wdf-sec2">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6">
-                        <h4>This training is for:</h4>
-                        <ol>
-                            <li> Young school leavers who aim to position
-                                themselves for the numerous opportunities that
-                                are embedded in the world of tech</li>
-                            <li> Young graduates who seek a career path as a web
-                                developer, software developer or as a full-stack
-                                developer</li>
-                            <li> Employed individuals who need a side
-                                hustle</li>
-                            <li>Unemployed or underemployed youths who feel
-                                stuck and would like to delve into a new career
-                                path</li>
-                            <li> Innovators and entrepreneurs who seek the
-                                necessary skills to help them build new products
-                                and take these products to market sooner and
-                                more effectively</li>
-                            <li> Business leaders who seek insights on how to
-                                automate their manual processes</li>
-                            <li> Individuals who aim to position themselves as a
-                                brand and would like to make their services
-                                visible to potential clients</li>
-                            <li> Young business owners who want to harness the
-                                opportunity the world wide web has to offer for
-                                their business.</li>
-                            <li>Innovators whose designers are never really able
-                                to replicate the ideas they envision.</li>
-                        </ol>
-                    </div>
-                    <div class="col-md-6">
-                        <h4>Bonus Courses</h4>
-                        <ol>
-                            <li>How to use add-on domains</li>
-                            <li> How to set up and manage dedicated emails</li>
-                            <li>Participants will be awarded certificates at the
-                                completion of the training</li>
-                            <li> Participants will be exposed to internships and
-                                job opportunities</li>
-                            <li> Free support and mentorship after completion of
-                                training</li>
-                            <li>Free refresher classes for students</li>
-                        </ol>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- wdf sec2 ends -->
 
         <!-- wdf sec3 starts -->
 
@@ -269,7 +245,7 @@
 
         <!-- wdf sec3 ends -->
 
-         <!-- last-sec starts -->
+        <!-- last-sec starts -->
 
         <div class="last-sec">
             <div class="container">
@@ -281,7 +257,7 @@
 
         <!-- last sec-ends -->
 
-          <!-- footer starts -->
+        <!-- footer starts -->
 
         <footer>
             <div class="footer-ctn">
@@ -302,7 +278,8 @@
                         <div class="col-md-2">
                             <ul>
                                 <li>Course</li>
-                                <li><a href="wdf.html">Web Design Frontend</a></li>
+                                <li><a href="wdf.html">Web Design
+                                        Frontend</a></li>
                                 <li><a href="pd.html">Product Design (UI/UX)</a></li>
                                 <li><a href="#">Data Science</a></li>
                                 <li><a href="#">Python</a></li>
